Added support for subscribed subreddits, removed ColorAdapter